--- a/service-detail.html
+++ b/service-detail.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>Service Detail | Merraki Interiors</title>
+    <title>Service Detail | Projects By Helios</title>
     <!-- /SEO Ultimate -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <meta charset="utf-8">
@@ -123,7 +123,7 @@
                     <div class="banner_content" data-aos="fade-left">
                         <div class="content">
                             <h1>Service Detail</h1>
-                            <p>Ruis aute irure dolor in rearehenderit in eouta velireu esse fugiat nulla pariatur.</p>
+                            <p>A closer look at how our services are tailored to meet your needs.</p>
                             <div class="box">
                                 <span class="mb-0">Home</span>
                                 <span class="mb-0 dash">-</span>
@@ -196,7 +196,7 @@
                     </div>
                     <div class="box-content">
                         <h5 class="text-white">Architecture</h5>
-                        <p class="text-size-16">Duis aute irure dolor in reare aenderit in voluptate velit es cillum dolore maiores alias co sequatur aut perferendis dolor aut rerum...</p>
+                        <p class="text-size-16">Thoughtfully planned architectural solutions that balance structure, beauty, and functionality....</p>
                         <a class="read_more text-decoration-none" href="service-detail.html">Read More
                             <i class="fa-solid fa-chevron-right"></i>
                         </a>
@@ -217,7 +217,7 @@
                     </div>
                     <div class="box-content">
                         <h5 class="text-white">Interior Work</h5>
-                        <p class="text-size-16">Duis aute irure dolor in reare aenderit in voluptate velit es cillum dolore maiores alias co sequatur aut perferendis dolor aut rerum...</p>
+                        <p class="text-size-16">Modern interior designs crafted to enhance comfort, flow, and everyday living....</p>
                         <a class="read_more text-decoration-none" href="service-detail.html">Read More
                             <i class="fa-solid fa-chevron-right"></i>
                         </a>
@@ -250,6 +250,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                     <div class="links">
                         <h4 class="text-white">Contact Info:</h4>
@@ -259,7 +260,7 @@
                             </figure>
                             <div class="content">
                                 <span class="text-size-16">Call us at:</span>
-                                <a class="text-size-16 mb-0 text-decoration-none" href="tel:+568925896325">+5689 2589 6325</a>
+                                <a class="text-size-16 mb-0 text-decoration-none" href="tel:+2347062499747">+234 7062499747</a>
                             </div>
                         </div>
                         <div class="lower-content">
@@ -268,7 +269,7 @@
                             </figure>
                             <div class="content">
                                 <span class="text-size-16">Our Location:</span>
-                                <p class="text text-size-16">121 King Street Melbourne, 3000, Australia</p>
+                                <p class="text text-size-16">10, Ogunyemi street, Gbagada Phase II, Lagos, Nigeria</p>
                             </div>
                         </div>
                         <div class="lower-content">
@@ -277,7 +278,7 @@
                             </figure>
                             <div class="content">
                                 <span class="text-size-16">Email us at:</span>
-                                <a href="mailto:info@merrakiinteriors.com" class="text-size-16 mb-0 text-decoration-none">info@merrakiinteriors.com</a>
+                                <a href="mailto:Heliosprojects24@gmail.com" class="text-size-16 mb-0 text-decoration-none">Heliosprojects24@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -292,7 +293,7 @@
                             </div>
                         </form>
                         <ul class="list-unstyled mb-0">
-                            <li class="text"><i class="circle fa-duotone fa-check"></i>Quis autem vel eum iure reprehenderit rui in ea voluptate velit esse.</li>
+                            <li class="text"><i class="circle fa-duotone fa-check"></i>Get insights, updates, and inspiration delivered straight to your inbox.</li>
                         </ul>
                         <div class="social-icons position-relative">
                             <ul class="list-unstyled mb-0 p-0 position-absolute">
@@ -310,12 +311,13 @@
     <figure class="footer-image mb-0">
         <img src="assets/images/footer-rightimage.png" alt="" class="img-fluid">
     </figure>
+
     <!--footer area-->
     <div class="copyright">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <p class="text-size-14">Copyright © 2023 merrakiinteriors All rights reserved.</p>
+                    <p class="text-size-14">Copyright © 2026 Helios_Projects All rights reserved.</p>
                 </div>
             </div>
         </div>
